sponser logo alignment fixed

--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ img {
     padding: 0;
     vertical-align: middle;
     text-align: center;
-    width: 80%;
+    width: 70%;
     position: relative;
   }
 
